--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Safer Yalla</title>
+	<link rel="icon" type="image/x-icon" href="Yalla1.png"/>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: Web 1920 – 1;
@@ -3138,7 +3139,7 @@ window.application = new Application();
 			</rect>
 		</svg>
 		<div id="Copyright__2021_Arabian_Medica">
-			<span>Copyright © 2021 Arabian Medical Supplies, All Rights Reserved.</span>
+			<span>Copyright © 2021 Safer Yalla, All Rights Reserved.</span>
 		</div>
 		<div id="Developed_and_Designed_by_Trus">
 			<span>Developed and Designed by Trusted Network Est</span>
