--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Safer Yalla</title>
-	<link rel="icon" type="image/x-icon" href="Yalla1.png"/>
+	<link rel="icon" type="image/x-icon" href="yalla1.png"/>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: Web 1920 – 1;
