--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1, safari"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Safer Yalla</title>
 	<link rel="icon" type="image/x-icon" href="yalla1.png"/>
