--- a/index.html
+++ b/index.html
@@ -3156,7 +3156,7 @@ window.application = new Application();
 		<div id="Website_is_Launching_Soon">
 			<span>Website is Launching Soon</span>
 		</div>
-		<img id="yalla1" src="yalla1@2x.gif" srcset="yalla1.png 1x, yalla1@2x.gif 2x">
+		<img id="yalla1" src="yalla1@2x.gif" srcset="yalla1@2x.gif 1x, yalla1@2x.gif 2x">
 			
 	</div>
 	<svg class="Rectangle_6">
