--- a/index.html
+++ b/index.html
@@ -7,6 +7,58 @@
 <title>Safer Yalla</title>
 <link rel="icon" type="image/x-icon" href="yalla1.png"/>
 <style id="applicationStylesheet" type="text/css">
+	/* Smartphones (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
+/* Styles */
+}
+/* Smartphones (landscape) ----------- */
+@media only screen
+and (min-width : 321px) {
+/* Styles */
+}
+/* Smartphones (portrait) ----------- */
+@media only screen
+and (max-width : 320px) {
+/* Styles */
+}
+/* iPads (portrait and landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px) {
+/* Styles */
+}
+/* iPads (landscape) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : landscape) {
+/* Styles */
+}
+/* iPads (portrait) ----------- */
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (orientation : portrait) {
+/* Styles */
+}
+/* Desktops and laptops ----------- */
+@media only screen
+and (min-width : 1224px) {
+/* Styles */
+}
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1824px) {
+/* Styles */
+}
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+}
 	.mediaViewInfo {
 		--web-view-name: Custom Size – 1;
 		--web-view-id: Custom_Size__1;
@@ -37,9 +89,10 @@
 		position: absolute;
 		width: 2133.366px;
 		height: 1199.835px;
+		background-size: cover;
 		left: -767.366px;
 		top: 0px;
-		overflow: visible;
+		overflow: hidden;
 	}
 	#Rectangle_4 {
 		fill: rgba(36,36,36,1);
@@ -58,7 +111,7 @@
 		height: 16px;
 		left: 73px;
 		top: 1168px;
-		overflow: visible;
+		overflow: hidden;
 	}
 	#Copyright__2021_Arabian_Medica {
 		left: 878px;
@@ -94,7 +147,7 @@
 		height: 472px;
 		left: 90px;
 		top: 81px;
-		overflow: visible;
+		overflow: hidden;
 	}
 	#Rectangle_1 {
 		fill: rgba(255,255,255,1);
@@ -147,7 +200,7 @@
 		height: 182px;
 		left: 175px;
 		top: 129px;
-		overflow: visible;
+		overflow: hidden;
 	}
 	#Rectangle_2 {
 		fill: rgba(255,255,255,1);
@@ -160,7 +213,7 @@
 	}
 	.Rectangle_2 {
 		position: absolute;
-		overflow: visible;
+		overflow: hidden;
 		width: 326px;
 		height: 38px;
 		left: 136px;
@@ -172,14 +225,14 @@
 		height: 38px;
 		left: 231px;
 		top: 485px;
-		overflow: visible;
+		overflow: hidden;
 	}
 	#Rectangle_7 {
 		fill: rgba(251,222,0,1);
 	}
 	.Rectangle_7 {
 		position: absolute;
-		overflow: visible;
+		overflow: hidden;
 		width: 300px;
 		height: 38px;
 		left: 0px;
@@ -189,7 +242,7 @@
 		left: 5px;
 		top: 9px;
 		position: absolute;
-		overflow: visible;
+		overflow: hidden;
 		width: 87px;
 		white-space: nowrap;
 		line-height: 15px;
@@ -205,7 +258,7 @@
 		left: 151px;
 		top: 438px;
 		position: absolute;
-		overflow: visible;
+		overflow: hidden;
 		width: 133px;
 		white-space: nowrap;
 		line-height: 16px;
@@ -223,8 +276,9 @@
 		height: 225.121px;
 		left: 852.059px;
 		top: 490.921px;
-		overflow: visible;
+		overflow: hidden;
 	}
+	
 </style>
 <script id="applicationScript">
 ///////////////////////////////////////
