--- a/index.html
+++ b/index.html
@@ -7,58 +7,6 @@
 <title>Safer Yalla</title>
 <link rel="icon" type="image/x-icon" href="yalla1.png"/>
 <style id="applicationStylesheet" type="text/css">
-	/* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-/* Styles */
-}
-/* Smartphones (landscape) ----------- */
-@media only screen
-and (min-width : 321px) {
-/* Styles */
-}
-/* Smartphones (portrait) ----------- */
-@media only screen
-and (max-width : 320px) {
-/* Styles */
-}
-/* iPads (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-/* Styles */
-}
-/* iPads (landscape) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : landscape) {
-/* Styles */
-}
-/* iPads (portrait) ----------- */
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)
-and (orientation : portrait) {
-/* Styles */
-}
-/* Desktops and laptops ----------- */
-@media only screen
-and (min-width : 1224px) {
-/* Styles */
-}
-/* Large screens ----------- */
-@media only screen
-and (min-width : 1824px) {
-/* Styles */
-}
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
-}
 	.mediaViewInfo {
 		--web-view-name: Custom Size – 1;
 		--web-view-id: Custom_Size__1;
@@ -89,10 +37,9 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		position: absolute;
 		width: 2133.366px;
 		height: 1199.835px;
-		background-size: cover;
 		left: -767.366px;
 		top: 0px;
-		overflow: hidden;
+		overflow: visible;
 	}
 	#Rectangle_4 {
 		fill: rgba(36,36,36,1);
@@ -111,7 +58,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		height: 16px;
 		left: 73px;
 		top: 1168px;
-		overflow: hidden;
+		overflow: visible;
 	}
 	#Copyright__2021_Arabian_Medica {
 		left: 878px;
@@ -141,14 +88,6 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		font-size: 12px;
 		color: rgba(255,255,255,1);
 	}
-	#Group_4 {
-		position: absolute;
-		width: 418px;
-		height: 472px;
-		left: 90px;
-		top: 81px;
-		overflow: hidden;
-	}
 	#Rectangle_1 {
 		fill: rgba(255,255,255,1);
 	}
@@ -158,12 +97,12 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		overflow: visible;
 		width: 493px;
 		height: 547px;
-		left: 0px;
-		top: 0px;
+		left: 90px;
+		top: 81px;
 	}
 	#Pack_Your_Bags {
-		left: 61px;
-		top: 251px;
+		left: 151px;
+		top: 332px;
 		position: absolute;
 		overflow: visible;
 		width: 297px;
@@ -179,8 +118,8 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		text-transform: uppercase;
 	}
 	#Website_is_Launching_Soon {
-		left: 94px;
-		top: 300px;
+		left: 184px;
+		top: 381px;
 		position: absolute;
 		overflow: visible;
 		width: 214px;
@@ -200,7 +139,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		height: 182px;
 		left: 175px;
 		top: 129px;
-		overflow: hidden;
+		overflow: visible;
 	}
 	#Rectangle_2 {
 		fill: rgba(255,255,255,1);
@@ -213,7 +152,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 	}
 	.Rectangle_2 {
 		position: absolute;
-		overflow: hidden;
+		overflow: visible;
 		width: 326px;
 		height: 38px;
 		left: 136px;
@@ -225,14 +164,14 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		height: 38px;
 		left: 231px;
 		top: 485px;
-		overflow: hidden;
+		overflow: visible;
 	}
 	#Rectangle_7 {
 		fill: rgba(251,222,0,1);
 	}
 	.Rectangle_7 {
 		position: absolute;
-		overflow: hidden;
+		overflow: visible;
 		width: 300px;
 		height: 38px;
 		left: 0px;
@@ -242,7 +181,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		left: 5px;
 		top: 9px;
 		position: absolute;
-		overflow: hidden;
+		overflow: visible;
 		width: 87px;
 		white-space: nowrap;
 		line-height: 15px;
@@ -258,7 +197,7 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		left: 151px;
 		top: 438px;
 		position: absolute;
-		overflow: hidden;
+		overflow: visible;
 		width: 133px;
 		white-space: nowrap;
 		line-height: 16px;
@@ -276,9 +215,8 @@ only screen and (min-device-pixel-ratio : 1.5) {
 		height: 225.121px;
 		left: 852.059px;
 		top: 490.921px;
-		overflow: hidden;
+		overflow: visible;
 	}
-	
 </style>
 <script id="applicationScript">
 ///////////////////////////////////////
@@ -3201,23 +3139,21 @@ window.application = new Application();
 	</svg>
 	<div id="Group_3">
 		<div id="Copyright__2021_Arabian_Medica">
-			<span>Copyright © 2021 Safer Yalla, All Rights Reserved.</span>
+			<span>Copyright © 2021 Arabian Medical Supplies, All Rights Reserved.</span>
 		</div>
 		<div id="Developed_and_Designed_by_Trus">
 			<span>Developed and Designed by Trusted Network Est</span>
 		</div>
 	</div>
-	<div id="Group_4">
-		<svg class="Rectangle_1">
-			<rect id="Rectangle_1" rx="50" ry="50" x="0" y="0" width="418" height="472">
-			</rect>
-		</svg>
-		<div id="Pack_Your_Bags">
-			<span>Pack Your Bags!</span>
-		</div>
-		<div id="Website_is_Launching_Soon">
-			<span>Website is Launching Soon</span>
-		</div>
+	<svg class="Rectangle_1">
+		<rect id="Rectangle_1" rx="50" ry="50" x="0" y="0" width="418" height="472">
+		</rect>
+	</svg>
+	<div id="Pack_Your_Bags">
+		<span>Pack Your Bags!</span>
+	</div>
+	<div id="Website_is_Launching_Soon">
+		<span>Website is Launching Soon</span>
 	</div>
 	<img id="yalla1" src="yalla1@2x.gif" srcset="yalla1@2x.gif 1x, yalla1@2x.gif 2x">
 		
@@ -3239,7 +3175,6 @@ window.application = new Application();
 			
 			<span><input type="email" id="Email" name="Email" value="Enter Your Email Address" style="border-width: 0px; color: #777777; font-size: 16px; border-color: transparent; outline-color: transparent; width: 300px;"></span>
 		</div></div></form>
-	</div>
 	<img id="image" src="image.png" srcset="image.png 1x, image@2x.png 2x">
 		
 </div>
