--- a/index.html
+++ b/index.html
@@ -218,6 +218,11 @@
 		overflow: visible;
 	}
 </style>
+	<script type="text/javascript">
+	if (screen.width <= 699) {
+document.location = "mobile.html";
+</script>
+	
 <script id="applicationScript">
 ///////////////////////////////////////
 // INITIALIZATION
