--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </style>
 	<script type="text/javascript">
 	if (screen.width <= 699) {
-document.location = "mobile.html";
+document.location = "https://github.com/Mouwasat/saf/blob/master/mobile.html";
 </script>
 	
 <script id="applicationScript">
