--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	}
 </style>
 	<script type="text/javascript">
-	if (screen.width <= 699) {
+	if (screen.width <= 480px) {
 document.location = "https://github.com/Mouwasat/saf/blob/master/mobile.html";
 </script>
 	
