--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 	}
 </style>
 	<script type="text/javascript">
-	if (screen.width <= 480px) {
-document.location = "https://github.com/Mouwasat/saf/blob/master/mobile.html";
+	if (screen.width <= 699px) {
+windows.location = "https://github.com/Mouwasat/saf/blob/master/mobile.html";
 </script>
 	
 <script id="applicationScript">
