--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 </style>
 	<script type="text/javascript">
 	if (screen.width <= 699px) {
-window.location = "https://github.com/Mouwasat/saf/blob/master/mobile.html";
+window.location = "https://saferyalla.com/mobile";
 </script>
 	
 <script id="applicationScript">
