--- a/mobile.html
+++ b/mobile.html
@@ -4,7 +4,8 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Custom Size – 1</title>
+<link rel="icon" type="image/x-icon" href="yalla1.png"/>
+<title>Safer Yalla</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
 		--web-view-name: Custom Size – 1;
