--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  if($(window).width() <= 950) {
+window.location = "https://saferyalla.com/mobile.html";
+}
+});
+</script>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -218,12 +226,6 @@
 		overflow: visible;
 	}
 </style>
-	<script type="text/javascript">
-    $(window).on('load resize',function(){
-        if($(window).width() < 700){
-            window.location = "https://saferyalla.com/mobile.html"
-        }
-    });
 	
 <script id="applicationScript">
 ///////////////////////////////////////
